# 2023_1_VKarmane

./: .gitignore  .gitmodules  README.md  main.cpp
GUI_FoxTailVPN/: CMakeLists.txt  DarkBorder.css  LightBorder.css
GUI_FoxTailVPN/conf/: configuration.txt
GUI_FoxTailVPN/include/: countries.h  mainwindow.h
GUI_FoxTailVPN/src/: configurationwindow.cpp  countries.cpp  mainwindow.cpp  staticswindow.cpp
MVP_GUI/: CMakeLists.txt  configurationwindow.cpp  configurationwindow.h  configurationwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  staticswindow.h
RK2/include/: mainwindow.h
RK2/src/: countries.ui
RK3/: CMakeLists.txt  authenticationwindow.cpp  authenticationwindow.h  configurationwindow.cpp  configurationwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  staticswindow.cpp  staticswindow.h  staticswindow.ui
TDD_GUI/: CMakeLists.txt  alltests.cpp  alltests.h  authorization.cpp  authorization.h  authorizationtest.cpp  authorizationtest.h  main.cpp  tests.cpp  tests.h  urlconfiguration.cpp  urlconfiguration.h  urlconfigurationtest.cpp  urlconfigurationtest.h
TDD_GUI/include/: configurationwindow.h  countries.h  mainwindow.h  testconfigurationwindow.h  testcountries.h  testmainwindow.h
TDD_GUI/src/: configurationwindow.cpp  countries.cpp  mainwindow.cpp  testconfigurationwindow.cpp  testcountries.cpp  testmainwindow.cpp
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  configuration.txt  qtcsettings.cmake
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-5ea1947a234543886f5a.json  cmakeFiles-v1-a4927f1f744ebab509cf.json  codemodel-v2-961155055ee408ec11f3.json  directory-.-Debug-675509ed8a9145a7d2e1.json  index-2023-05-23T14-24-24-0296.json  target-GUI-Debug-62d72afe6e5842d12564.json  target-GUI_autogen-Debug-98178d3030eaae5e187b.json  target-GUI_autogen_timestamp_deps-Debug-d360132a39744f253d05.json
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: 32.h.3E67387E843624F7.idx  64.h.1B2DCA20315B99F7.idx  ClientHandshake.cpp.4D3D7FE52F5077B8.idx  ClinetHandshake.hpp.64C82B0F47990967.idx  ConfigClient.cpp.206D351A823AC52F.idx  ConfigClient.hpp.47B9CDBE04CCEFC7.idx  Parser.cpp.95FDF629A04CC794.idx  Parser.hpp.30A1D9A79C00AD0F.idx  QApplication.2688D34FE8DE61FE.idx  QDialog.C2A97E441FC804FC.idx  QFile.E20D5FE9216217F5.idx  QList.1D5266A2E79605BB.idx  QMainWindow.4B994A194774FE41.idx  QObject.E8B1D3947F042884.idx  QRect.B7DC1230936A93DB.idx  QScreen.DB5CE703E9DCF402.idx  QSize.9D5EA136CB442719.idx  QSizeF.252D25CC652E82C8.idx  QTextStream.D89071689B0D6B12.idx  QTransform.1E6F5F979354BECF.idx  VPNClient.cpp.9DE8A2804481282A.idx  VPNClient.hpp.B88FBDB1DB92283F.idx  __stddef_max_align_t.h.094FCDCE945B3FE0.idx  _cassert.h.1D6B61DA01EA5DB9.idx  _exception.h.53FCC34E6F0A10DB.idx  _prefix.h.3C72C06E1F85153B.idx  _prefix.h.9008AB579F885526.idx  add.hpp.EDEAB21B4E3CDC1C.idx  address.hpp.1D32E8D386D5A840.idx  address.hpp.BB2CED91CB0257A7.idx  address.ipp.BF3CBAEBF4EF1504.idx  address_v4.hpp.93F2D39E09C662BA.idx  address_v4.hpp.B4FE660E71CB77F1.idx  address_v4.ipp.830A9E4C03E90A9C.idx  address_v4_iterator.hpp.0C870A81C3139525.idx  address_v4_range.hpp.411B23A2F8BDEEE6.idx  address_v6.hpp.0FEA7367A48369AF.idx  address_v6.hpp.1F21CE277F49FC80.idx  (+1068 more)
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/GUI_autogen/: deps  mocs_compilation.cpp
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/GUI_autogen/35M3VFK7LL/: moc_authenticationwindow.cpp  moc_authenticationwindow.cpp.d  moc_configurationwindow.cpp  moc_configurationwindow.cpp.d  moc_countries.cpp  moc_countries.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_staticswindow.cpp  moc_staticswindow.cpp.d
build-cli-vpn-Desktop_Qt_6_5_0_GCC_64bit-Debug/GUI_autogen/include/: ui_authenticationwindow.h  ui_configurationwindow.h  ui_countries.h  ui_mainwindow.h  ui_staticswindow.h
cli-vpn/: CMakeLists(back).txt  CMakeLists.txt  CMakeLists.txt.user.7228b12  main.cpp  test.cpp  tmpFile.txt
cli-vpn/gui/: CMakeLists.txt  resource.qrc
cli-vpn/gui/include/: configurationwindow.h  countries.h  mainwindow.h
cli-vpn/gui/src/: authenticationwindow.cpp  configurationwindow.cpp  configurationwindow.ui  countries.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
cli-vpn/gui/src/ui/: authenticationwindow.ui  configurationwindow.ui  countries.ui  dialog.ui
cli-vpn/handshake/: CMakeLists.txt
cli-vpn/handshake/headers/: ClinetHandshake.hpp  DnsRequest.hpp
cli-vpn/handshake/src/: ClientHandshake.cpp  DnsRequest.cpp
cli-vpn/logic/: CMakeLists.txt  Context.txt  main.cpp
cli-vpn/logic/include/: ConfigClient.hpp  DnsRequest.hpp  Parser.hpp  Utilities.hpp  VPNClient.hpp  a.out  test.cpp  vpnTunnel.hpp
cli-vpn/logic/keyPair/: wg-quick.sh
cli-vpn/logic/src/: ConfigClient.cpp  Parser.cpp  VPNClient.cpp
cli-vpn/logic/test/: configTest.cpp  parserTest.cpp
cli-vpn/logic/test/test_data/: invalid_config.txt  valid_config.txt
cli-vpn/tests/: CMakeLists.txt  ClientConfigTest.cpp  DnsRequestTest.cpp  ParseTest.cpp  VPNClientTest.cpp
cli-vpn/tests/build-tests/: CMakeCache.txt
client/: CMakeLists.txt
client/Include/: VPNContext.hpp
client/network/: CMakeLists.txt  main.cpp
client/network/include/: VPNClient.hpp
client/network/src/: VPNClient.cpp
gui/: CMakeLists.txt  resource.qrc
gui/include/: authenticationwindow.h  mainwindow.h
gui/src/: mainwindow.cpp
gui/src/ui/: staticswindow.ui
server/: CMakeLists.txt
server/include/: TCPConnect.hpp  VpnWorker.hpp  VpnWorket.hpp  config.hpp  response_request.hpp  server.hpp  wireguardKey.hpp
server/src/: VpnWorker.cpp  config.cpp  main.cpp  server.cpp  wireguardKey.cpp
server/testFiles/: testStuctServer.cpp  testThread.cpp  test_asins.cpp
server/tests/: CMakeLists.txt  config.conf  test.cpp  testConfig.cpp  testServer.cpp
uml/: README.md  UML (1).drawio  UML.drawio
